--- a/shard.yml
+++ b/shard.yml
@@ -1,2 +1,16 @@
 name: term-cursor
-version: 0.3.0
+version: 0.2.0
+
+authors:
+  - Chris Watson <cawatson1993@gmail.com>
+
+description: Terminal cursor movement and manipulation
+
+development_dependencies:
+  spectator:
+    gitlab: arctic-fox/spectator
+    version: ~> 0.12.0
+
+crystal: ">= 1.0.0"
+
+license: MIT
